Put Images In Folder Changed Source

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
     <table cellspacing="40">
       <tr>
-        <td><img src="xwingyes.webp" alt="X-Wing Background"></td>
+        <td><img src="images/xwingyes.webp" alt="X-Wing Background"></td>
         <td><h1>Bryan Kawashima</h1>
         <em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong></em></td>
       </tr>
