--- a/index.html
+++ b/index.html
@@ -75,5 +75,5 @@ Come Back Soon!</strong></h3>
 </table>
   <hr>
   <a href="hobbies.html">My Hobbies</a>
-  <a href="Contact-Me.html">Contact Me</a>
+  <a href="contact-me.html">Contact Me</a>
 </html>
